Bug 389767 - Regression: Fixed-position items are missing on 2nd page of print-preview, fixed on behalf of HP, r+sr=bzbarsky